--- a/deno.json
+++ b/deno.json
@@ -1,6 +1,6 @@
 {
     "name": "@luxemburgo/journey",
-    "version": "0.7.0",
+    "version": "0.9.0",
     "exports": {
         "./server": "./server/main.js",
         "./tools": "./tools/main.js"
@@ -9,7 +9,8 @@
     "publish": {
         "exclude": [
             "old",
-            "src"
+            "src",
+            "js"
         ]
     }
 }
