modified:   deno.json 	deleted:    hashfile.ts 	modified:   src/client/index.js 	modified:   src/client/render.js 	modified:   src/common/commands.js 	modified:   src/server/bundleControllers.js 	modified:   src/server/mod.ts 	modified:   src/server/types/JourneyConfig.ts

--- a/deno.json
+++ b/deno.json
@@ -7,7 +7,7 @@
     },
     "license": "MIT",
     "publish": {
-        "exclude": []
+        "exclude": ["lib"]
     },
     "imports": {
         "@std/fs": "jsr:@std/fs@1.0.3",
