modified:   deno.json 	modified:   deno.lock 	modified:   src/common/jsx.js 	new file:   src/examples/basic/mod.ts 	new file:   src/examples/basic/src/pages/index.js 	new file:   src/examples/createBasicExample.js 	new file:   src/examples/createExample.js 	new file:   src/examples/createMinimalExample.js 	new file:   src/examples/full/deno.json 	new file:   src/examples/minimal/mod.ts 	new file:   src/examples/minimal/src/pages/index.js 	modified:   src/server/bundleControllers.js 	renamed:    src/server/mod.ts -> src/server/runServer.ts

--- a/deno.json
+++ b/deno.json
@@ -1,8 +1,8 @@
 {
     "name": "@luxemburgo/journey",
-    "version": "0.15.5",
+    "version": "0.17.0",
     "exports": {
-        ".": "./src/server/mod.ts",
+        ".": "./src/server/runServer.ts",
         "./types": "./src/server/types/JourneyConfig.ts"
     },
     "license": "MIT",
