modified:   deno.json 	new file:   lib/validate-functional.ts 	new file:   lib/validate.ts 	new file:   lib/validator.ts 	modified:   src/client/index.js 	modified:   src/client/render.js 	modified:   src/common/commands.js 	modified:   src/common/createRouterController.js 	new file:   src/common/injector.js 	modified:   src/server/render.js 	modified:   src/server/runServer.ts 	modified:   src/server/types/JourneyConfig.ts

--- a/deno.json
+++ b/deno.json
@@ -1,6 +1,6 @@
 {
     "name": "@luxemburgo/journey",
-    "version": "0.22.0",
+    "version": "0.23.0",
     "exports": {
         ".": "./src/server/runServer.ts",
         "./types": "./src/server/types/JourneyConfig.ts"
@@ -9,6 +9,9 @@
     "publish": {
         "exclude": ["lib"]
     },
+    "ignore": [
+        "lib"
+    ],
     "imports": {
         "@std/fs": "jsr:@std/fs@1.0.3",
         "@std/path": "jsr:@std/path@1.0.4",
