--- a/deno.json
+++ b/deno.json
@@ -1,9 +1,9 @@
 {
     "name": "@luxemburgo/journey",
-    "version": "0.23.0",
+    "version": "0.25.0",
     "exports": {
         ".": "./src/server/runServer.ts",
-        "./types": "./src/server/types/JourneyConfig.ts"
+        "./types": "./src/types/types.ts"
     },
     "license": "MIT",
     "publish": {
