--- a/deno.json
+++ b/deno.json
@@ -1,8 +1,8 @@
 {
     "name": "@luxemburgo/journey",
-    "version": "0.25.0",
+    "version": "0.25.1",
     "exports": {
-        ".": "./src/server/runServer.ts",
+        ".": "./src/server/run-server.ts",
         "./types": "./src/types/types.ts"
     },
     "license": "MIT",
